@@ -1,63 +1,65 @@
 {
-  "name": "wonder-scale-website",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "dev": "ng serve",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@agm/core": "^1.1.0",
-    "@angular/animations": "~9.0.2",
-    "@angular/cdk": "^9.2.2",
-    "@angular/common": "~9.0.2",
-    "@angular/compiler": "~9.0.2",
-    "@angular/core": "~9.0.2",
-    "@angular/forms": "~9.0.2",
-    "@angular/material": "^9.2.2",
-    "@angular/platform-browser": "~9.0.2",
-    "@angular/platform-browser-dynamic": "~9.0.2",
-    "@angular/router": "~9.0.2",
-    "@auth0/angular-jwt": "^4.0.0",
-    "@jemys89/ngx-facebook": "^1.0.0",
-    "angular-6-social-login": "^1.1.1",
-    "angular-bootstrap-md": "^9.2.0",
-    "croppie": "^2.6.4",
-    "jquery": "^3.5.1",
-    "jquery.qrcode": "^1.0.3",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.25.3",
-    "ng-lazyload-image": "^7.1.0",
-    "ngx-swiper-wrapper": "^9.0.1",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.3",
-    "@angular/cli": "~9.0.3",
-    "@angular/compiler-cli": "~9.0.2",
-    "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
-  }
+    "name": "wonder-scale-website",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "dev": "ng serve",
+        "start": "ng serve",
+        "build": "ng build",
+        "upload": "aws s3 cp dist/wonder-scale-website s3://www.wonderscale.com --recursive",
+        "deploy": "npm run build && npm run upload",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@agm/core": "^1.1.0",
+        "@angular/animations": "~9.0.2",
+        "@angular/cdk": "^9.2.2",
+        "@angular/common": "~9.0.2",
+        "@angular/compiler": "~9.0.2",
+        "@angular/core": "~9.0.2",
+        "@angular/forms": "~9.0.2",
+        "@angular/material": "^9.2.2",
+        "@angular/platform-browser": "~9.0.2",
+        "@angular/platform-browser-dynamic": "~9.0.2",
+        "@angular/router": "~9.0.2",
+        "@auth0/angular-jwt": "^4.0.0",
+        "@jemys89/ngx-facebook": "^1.0.0",
+        "angular-6-social-login": "^1.1.1",
+        "angular-bootstrap-md": "^9.2.0",
+        "croppie": "^2.6.4",
+        "jquery": "^3.5.1",
+        "jquery.qrcode": "^1.0.3",
+        "jwt-decode": "^2.2.0",
+        "lodash": "^4.17.15",
+        "moment": "^2.25.3",
+        "ng-lazyload-image": "^7.1.0",
+        "ngx-swiper-wrapper": "^9.0.1",
+        "rxjs": "~6.5.4",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.900.3",
+        "@angular/cli": "~9.0.3",
+        "@angular/compiler-cli": "~9.0.2",
+        "@angular/language-service": "~9.0.2",
+        "@types/node": "^12.11.1",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "codelyzer": "^5.1.2",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.0",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "protractor": "~5.4.3",
+        "ts-node": "~8.3.0",
+        "tslint": "~5.18.0",
+        "typescript": "~3.7.5"
+    }
 }
