@@ -7,6 +7,7 @@ export const environment = {
   IMAGE_URL: 'https://assets.wonderscale.com/',
   ITEMS_PER_PAGE: 25,
   RETURN_URL: '',
+  SOURCE: 'website',
   FACEBOOK_APP_ID: '246047829574930',
   HERE_APP_API: 'h9LLOE7i3CG3y1OKhWxw',
   HERE_APP_CODE: 'ERx9SWBfCHLlbN1vKOvlng',
