@@ -4,6 +4,11 @@
 
 - v1.0.1000                                 -
 ---------------------------------------------
+- 2020-05-29                                -
+---------------------------------------------
+.: WSW: Task: Update profile settings (WSW-1)
+
+---------------------------------------------
 - 2020-05-18                                -
 ---------------------------------------------
 .: WSW: Story: Searching Page Module (WSW-12)
